--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,79 @@
-* {
-    border: 1px solid;
+
+a:hover {
+    transform: scale(1.1);
 }
 
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+#calculator-container {
+    display: grid;
+    grid-template-areas: 
+    'screen-operation screen-secondary screen-secondary screen-secondary'
+    'screen-operation screen-primary screen-primary screen-primary'
+    'seven  eight   nine    plus'
+    'four   five    six     minus'
+    'one    two     three   divide'
+    'zero  enter   enter   multiply'
+    ;
+    grid-gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+    max-width: 600px;
+    margin: auto;
+}
+
+#calculator-container > a{
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+#screen-primary {
+    grid-area: screen-primary;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: right;
+    padding: 20px 50px;
+    font-size: 30px;
+    min-height: 1em;
+}
+
+#screen-secondary {
+    grid-area: screen-secondary;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding:5px 20px;
+    text-align: right;
+    font-size: 20px;
+    min-height: 1em;
+    
+}
+#screen-operation {
+    display: flex;
+    grid-area: screen-operation;
+    background-color: rgba(255, 255, 255, 0.8);
+    justify-content: center;
+    align-items: center;
+
+    font-size: 30px;
+}
+
+#one {grid-area: one;}
+#two {grid-area: two;}
+#three {grid-area: three;}
+#four {grid-area: four;}
+#five {grid-area: five;}
+#six {grid-area: six;}
+#seven {grid-row: seven;}
+#eight {grid-area: eight;}
+#nine {grid-area: nine;}
+#zero {grid-area: zero;}
+#plus {grid-area: plus;}
+#minus {grid-area: minus;}
+#divide {grid-area: divide;}
+#multiply {grid-area: multiply;}
+#enter {grid-area: enter;}
